[package]
name = "intear-smart-wallet"
description = "Intear Smart Wallet contract that is deployed for all accounts"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/INTEARnear/wallet-contract"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.15.0-rust-1.86.0"
image_digest = "sha256:aad208b09976f643b56104cc6af87fbb03afadff2e76f9e5e3fa283969e15f8b"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = "5.14.0"
alloy-primitives = { version = "1.1.2", features = ["serde", "k256"], default-features = false}
solana-signature = { version = "2.3.0", features = ["serde", "verify"], default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
regex = "1.11.1"
serde_json = "1.0.140"

[dev-dependencies]
near-sdk = { version = "5.14", features = ["unit-testing"] }
near-workspaces = { version = "0.20.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
hex = "0.4.3"
alloy-signer = "1.0.8"
alloy-signer-local = "1.0.8"
anyhow = "1.0"
solana-keypair = "2.2.1"
solana-signer = "2.2.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
abi = ["near-sdk/__abi-generate"]
